[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rsc-client"
version = "1.1.20260413"
description = "Low-level Python bindings for the Rubrik Security Cloud GraphQL API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "Rubrik, Inc." },
]
keywords = ["rubrik", "rsc", "graphql", "security", "backup", "api", "client"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sgqlc>=9.0",
    "requests>=2.28",
    "rank-bm25>=0.2",
]

[project.urls]
Homepage = "https://github.com/rubrikinc/rubrik-security-cloud-python-graphql-client"
Repository = "https://github.com/rubrikinc/rubrik-security-cloud-python-graphql-client"
"Bug Tracker" = "https://github.com/rubrikinc/rubrik-security-cloud-python-graphql-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rsc"]

[tool.hatch.version]
path = "pyproject.toml"
